--- a/index.html
+++ b/index.html
@@ -51,21 +51,47 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <div class="row row-content align-item-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img  class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
-                    <div class="media-body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT </span><span class="badge badge-pill badge-primary">$4.99</span></h2>
+    <div class="container"><!-- carousel added-->
+         <div class="row row-content">
+          <div class="col">
+              <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" role="listox">
+                    <div class="carousel-item active">
+                        <img class="d-block img=fluid" src="img/uthappizza.png"alt="uthappizza">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2 >Uthappizza<span class="badge badge-danger">HOT </span><span class="badge badge-pill badge-primary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                        </div>
                     </div>
-                </div>   
+                    <div class="carousel-item ">
+                        <img class="d-block img=fluid" src="img/buffet.png"alt="buffet">  
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <img class="d-block img=fluid" src="img/alberto.png"alt="alberto">  
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Alberto Somayya</h2><h4>Executive Chef</h4>
+                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.</p> 
+                        </div>
+                    </div>
+                </div> 
+                <ol class="carousel-indicators">
+                    <li data-target="#mycarousel" data-slide="0" class="active"></li>
+                    <li data-target="#mycarousel" data-slide="1" ></li>
+                    <li data-target="#mycarousel" data-slide="2" ></li>
+                </ol>    
+                <a class="carousel-control-prev" role="button" href="#mycarousel" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" role="button" href="#mycarousel" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
             </div>
-        </div>
+          </div>
+      </div>
 
 
         <div class="row row-content align-item-center">
