--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a table</h3>
                 <div class="card-body">
-                    <form id="reserve1">
+                    <form id="reservetable">
                         <div class="form-group row align-items-center">
                             <label class="col-12 col-md-2 col-form-label">Number of Guest</label>
                             
